docker-registry/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  ports:
  - name: docker-registry
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: docker-registry
  type: ClusterIP
